# rs_send

./: Cargo.toml  PCAPdroid_02_Jul_14_41_41.pcap  Readme.md
src/: discovery.rs  main.rs  receive_files.rs  send_files.rs  send_folder.rs
