[package]
name = "rs_send"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "multipart", "stream"] } # for making http requests
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] } # allows us to parse json
serde_json = "1.0.117"
sha256 = "1.5.0"
tokio-util = "0.7.11"
anyhow = "1.0.86"
axum =  "0.7.5"
tower-http = { version = "0.5.2", features = ["cors", "limit"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }

# [profile.release]
# lto = true
# codegen-units = 1
# panic = 'abort'
# strip = true
# opt-level = 'z' # only have smaller size after strip
# rpath = true
